examples/type_system/failing/105_unknown_effect_suggestion.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit with I {
}
